<resources>
    <string name="app_name">Love Music</string>
    <string name="text_search_tracks">Search tracks</string>
    <string name="text_all_music">All Music</string>
    <string name="text_all_audio">All Audio</string>
    <string name="text_rock">Rock</string>
    <string name="text_ambient">Ambient</string>
    <string name="text_classical">Classical</string>
    <string name="text_country">Country</string>
    <string name="text_home">Home</string>
    <string name="text_library">Library</string>
    <string name="text_setting">Setting</string>
    <string name="text_temp_text">temp text</string>
    <string name="text_suggested_songs">SUGGESTED SONGS</string>
    <string name="text_popular_playlist">POPULAR PLAYLIST</string>
    <string name="text_suffle">Shuffle</string>
    <string name="text_genre">Genre</string>
    <string name="text_one">1</string>
    <string name="text_search">Search</string>
    <string name="text_add_to_favorite">Add to favorite</string>
    <string name="text_add_to_playlist">Add to playlist</string>
    <string name="text_add_to_queue_play_next">Add to queue play next</string>
    <string name="text_temp_time">00:00</string>
    <string name="text_playing_list">Playing List</string>
    <string name="text_number_in_brackets">(40)</string>
    <string name="notify_play_track_error">Play track failed</string>
    <string name="text_done">Done</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_input_minute">Input minutes</string>
    <string name="text_set_time">Set time</string>
    <string name="text_minutes">minute(s)</string>
    <string name="text_notify_timer">Music goes off after </string>
    <string name="text_history">HISTORY</string>
    <string name="text_result">RESULT</string>
    <string name="mess_search_error">Search failed</string>
    <string name="text_my_songs">My songs</string>
    <string name="text_zero">0</string>
    <string name="text_playlist">Playlist</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_download">Download</string>
    <string name="default_time">0</string>
    <string name="text_play">play</string>
    <string name="text_pause">pause</string>
    <string name="text_next">next</string>
    <string name="text_previous">previous</string>
    <string name="chanel_id">Love music</string>
    <string name="animation_rotation">rotation</string>
    <string name="title_downloaded">Downloaded</string>
    <string name="title_my_songs">My Songs</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_play_list">PlayLists</string>
</resources>
