<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_blue"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        app:layout_constraintTop_toBottomOf="@id/view_header" />

    <View
        android:id="@+id/view_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_light_gray"
        app:layout_constraintTop_toBottomOf="@id/view_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/text_set_time"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/view_header"
        app:layout_constraintStart_toStartOf="@id/view_header"
        app:layout_constraintTop_toTopOf="@id/view_header" />


    <Switch
        android:id="@+id/switch_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="@id/view_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_header" />

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:hint="@string/text_input_minute"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/view_content"
        app:layout_constraintEnd_toEndOf="@id/view_content"
        app:layout_constraintStart_toStartOf="@id/view_content"
        app:layout_constraintTop_toTopOf="@id/view_content" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/bg_button_white"
        android:text="@string/text_cancel"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@id/view_continue"
        app:layout_constraintEnd_toStartOf="@id/button_done"
        app:layout_constraintTop_toTopOf="@id/view_continue" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/bg_button_blue"
        android:text="@string/text_done"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/view_continue"
        app:layout_constraintEnd_toEndOf="@id/view_continue"
        app:layout_constraintTop_toTopOf="@id/view_continue" />

</android.support.constraint.ConstraintLayout>
