<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_small_artwork"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@mipmap/square_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_temp_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toTopOf="@id/text_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_small_artwork"
        app:layout_constraintTop_toTopOf="@id/image_small_artwork" />

    <TextView
        android:id="@+id/text_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_temp_text"
        app:layout_constraintBottom_toBottomOf="@id/image_small_artwork"
        app:layout_constraintEnd_toEndOf="@id/text_title"
        app:layout_constraintStart_toStartOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <ImageView
        android:id="@+id/image_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@drawable/ic_favorite_border_black_24dp"
        app:layout_constraintStart_toStartOf="@id/image_small_artwork"
        app:layout_constraintTop_toBottomOf="@id/image_small_artwork" />

    <TextView
        android:id="@+id/text_add_to_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/text_add_to_favorite"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_favorite"
        app:layout_constraintTop_toTopOf="@id/image_favorite" />

    <ImageView
        android:id="@+id/image_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@drawable/ic_playlist_add_black_24dp"
        app:layout_constraintStart_toStartOf="@id/image_small_artwork"
        app:layout_constraintTop_toBottomOf="@id/image_favorite" />

    <TextView
        android:id="@+id/text_add_to_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/text_add_to_playlist"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_favorite"
        app:layout_constraintTop_toTopOf="@id/image_playlist" />

    <ImageView
        android:id="@+id/image_queue_play_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_20"
        android:src="@drawable/ic_queue_play_next_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/image_small_artwork"
        app:layout_constraintTop_toBottomOf="@id/image_playlist" />

    <TextView
        android:id="@+id/text_add_to_queue_play_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/text_add_to_queue_play_next"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_favorite"
        app:layout_constraintTop_toTopOf="@id/image_queue_play_next" />

</android.support.constraint.ConstraintLayout>
