<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_action_bar"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:src="@drawable/ic_arrow_back_white_24dp"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/view_action_bar"
        app:layout_constraintStart_toStartOf="@id/view_action_bar"
        app:layout_constraintTop_toTopOf="@id/view_action_bar" />

    <android.support.v7.widget.SearchView
        android:id="@+id/search_view_track"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:queryHint="@string/text_search_tracks"
        app:layout_constraintBottom_toBottomOf="@id/view_action_bar"
        app:layout_constraintEnd_toStartOf="@id/image_micro"
        app:layout_constraintStart_toEndOf="@id/image_back"
        app:layout_constraintTop_toTopOf="@id/view_action_bar" />

    <ImageView
        android:id="@+id/image_micro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_15"
        android:src="@drawable/ic_mic_none_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/view_action_bar"
        app:layout_constraintEnd_toEndOf="@id/view_action_bar"
        app:layout_constraintTop_toTopOf="@id/view_action_bar" />

    <TextView
        android:id="@+id/text_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/text_history"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_action_bar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_history"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/text_history"
        app:layout_constraintTop_toBottomOf="@id/text_history" />

    <android.support.constraint.Group
        android:id="@+id/group_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="text_result, recycler_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_history" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/text_result"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="@id/text_history"
        app:layout_constraintTop_toBottomOf="@id/recycler_history" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/text_result"
        app:layout_constraintTop_toBottomOf="@id/text_result" />

</android.support.constraint.ConstraintLayout>
